<resources>
    <string name="app_name">Healthy Pet</string>

    <!-- Title Text -->

    <string name="list_pet_text_title">Listar mascotas</string>
    <string name="register_pet_text_title">Registrar mascota</string>
    <string name="profile_pet_text_title">Este perfil es de, </string>
    <string name="edit_pet_text_title">Editar Mascota</string>
    <string name="injection_text_title">Lista de inyecciones</string>
    <string name="register_injection_text_title">Registrar inyeccion</string>
    <string name="edit_injection_text_title">Editar inyeccion</string>

    <!-- Text -->

    <string name="skip_text">Omitir</string>
    <string name="title_welcome_one">Bienvenido a Healthy Pet</string>
    <string name="title_welcome_two">La mejor experiencia</string>
    <string name="title_welcome_three">El mejor cuidado de tus mascotas</string>
    <string name="description_welcome_one">La mejor experiencia para el cuidado de mascotas.</string>
    <string name="description_welcome_two">La app permite el manejo de manera sencilla y simple de sus mascotas para el cuidado.</string>
    <string name="description_welcome_three">La app se base en que registren el cuidado y tradamiento de sus mascotas como una agenta personal.</string>
    <string name="choose_pet_text">¿Cuál es la mascota que quieres ver?</string>
    <string name="add_pet_text">+ Añadir mascota</string>
    <string name="male_text">Macho</string>
    <string name="female_text">Hembra</string>
    <string name="name_pet_text">Nombre de las mascota</string>
    <string name="name_pet_item_text">Nombre:</string>
    <string name="species_pet_text">Especie de las mascota</string>
    <string name="sex_pet_text">Sexo de las mascota</string>
    <string name="date_pet_text">Fecha de nacimiento de la mascota</string>
    <string name="date_pet_item_text">Fecha de nacimiento:</string>
    <string name="information_pet_text">Información General</string>
    <string name="dog_text">Perro</string>
    <string name="cat_text">Gato</string>
    <string name="vet_text">Veterinaria</string>
    <string name="bathrooms_text">Baños</string>
    <string name="injection_text">Inyecciones</string>
    <string name="name_profile_text">Nombre:</string>
    <string name="specie_profile_text">Especie:</string>
    <string name="sex_profile_text">Sexo:</string>
    <string name="date_profile_text">Fecha de nacimiento:</string>
    <string name="share_text">Compartir la App</string>
    <string name="qualify_text">Calificar la App</string>
    <string name="option_text">Opciones de la App:</string>
    <string name="message_text">¡Descubre nuestra app de mascotas!\n\nCuida, conecta y comparte momentos con tus adorables amigos peludos. Descarga nuestra app ahora y lleva el cuidado de tus mascotas al siguiente nivel. ¡No te lo pierdas!</string>
    <string name="current_date_text">Fecha actual:</string>
    <string name="next_appointment_text">Próxima cita:</string>
    <string name="distemper_text">Distemper</string>
    <string name="par_virus_text">Parvovirus</string>
    <string name="hepatitis_text">Hepatitis</string>
    <string name="influenza_text">Parainfluenza</string>
    <string name="lep_text">Leptospira</string>
    <string name="rhino_text">Rinotraqueitis</string>
    <string name="pan_text">Panleucopenia</string>
    <string name="calicivirus_text">Calicivirus</string>
    <string name="rabia_text">Rabia</string>
    <string name="other_text">Otro</string>
    <string name="injection_list_text">Inyecciones:</string>
    <string name="see_more_text">Ver más</string>
    <string name="injection_item_text">Inyección:</string>

    <!-- Hint Text -->
    <string name="comment_observation_hint">comentario o observación de la vacuna....*</string>

    <!-- Button Text -->

    <string name="next_button">Siguiente</string>
    <string name="begin_button">Empezar</string>
    <string name="save_button">Guardar</string>
    <string name="accept_button">Aceptar</string>
    <string name="edit_pet_button">Editar Mascota</string>
    <string name="add_injection_button">Agregar vacuna</string>
    <string name="delete_pet_button">Eliminar mascota</string>
    <string name="delete_button">Eliminar</string>
    <string name="edit_button">Editar</string>

    <!-- Error Message -->

    <string name="not_pet_list_error_message">No tiene mascotas registradas</string>
    <string name="photo_url_message">Ingrese una foto de la mascota</string>
    <string name="name_message">Ingrese un nombre de la mascota</string>
    <string name="date_message">Ingrese una fecha de nacimiento de la mascota</string>
    <string name="register_pet_message">Se registro su mascota con éxito</string>
    <string name="update_pet_message">Se actualizó su mascota con éxito</string>
    <string name="injection_message">No hay inyecciones registrados</string>
    <string name="next_appointment_message">No hay fecha de la proxima cita</string>
    <string name="select_injection_message">No selecciono una inyección</string>
    <string name="photo_url_injection_message">Ingrese una foto de la inyección</string>
    <string name="register_injection_message">Se registro su inyección con éxito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>