<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/injectCard"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/dimen_5"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/blue_4552CB">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_16"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/photoSimple"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_120"
                    fresco:placeholderImage="@drawable/ic_profile_holder"
                    fresco:placeholderImageScaleType="fitCenter"
                    fresco:roundBottomEnd="true"
                    fresco:roundBottomLeft="true"
                    fresco:roundBottomRight="true"
                    fresco:roundBottomStart="true"
                    fresco:roundTopEnd="true"
                    fresco:roundTopLeft="true"
                    fresco:roundTopRight="true"
                    fresco:roundTopStart="true"
                    fresco:roundedCornerRadius="@dimen/dimen_5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen_0"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="NestedWeights">

                    <TextView
                        style="@style/Headline.H5"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/injection_item_text" />

                    <TextView
                        android:id="@+id/injectionText"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Headline.H5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/next_appointment_text" />

                    <TextView
                        android:id="@+id/dateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_0"
                    android:layout_gravity="right|bottom"
                    android:layout_weight="1"
                    android:gravity="right|bottom"
                    android:orientation="horizontal"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:id="@+id/seeMoreText"
                        style="@style/Headline.H5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|bottom"
                        android:gravity="right|bottom"
                        android:text="@string/see_more_text"
                        android:textColor="@color/blue_4552CB" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>